FL_parser.output
Grammar

    0 $accept: program $end

    1 program: program_decl sec_header complex_cmd '.'

    2 program_decl: KW_PROGRAM IDENT ';'

    3 sec_header: %empty
    4           | sec_header var_decl
    5           | sec_header subprogram
    6           | sec_header ';' var_decl
    7           | sec_header ';' subprogram

    8 complex_cmd: KW_BEGIN statements KW_END

    9 statements: %empty
   10           | statement_list

   11 statement_list: statement
   12               | statement_list ';' statement
   13               | statement_list statement

   14 statement: cmd_list
   15          | return_cmd
   16          | result_cmd

   17 subprogram: procedure
   18           | function

   19 basic_data_type: KW_INTEGER
   20                | KW_BOOLEAN
   21                | KW_CHAR
   22                | KW_REAL

   23 dimensions: '[' POSINT ']'
   24           | dimensions '[' POSINT ']'

   25 var_decl: KW_VAR var_decl_comp
   26         | var_decl_comp
   27         | special_type

   28 var_decl_comp: var_id ':' basic_data_type ';'
   29              | var_id ':' KW_ARRAY KW_OF basic_data_type ';'
   30              | var_id ':' KW_ARRAY dimensions KW_OF basic_data_type ';'
   31              | var_id ':' IDENT ';'

   32 special_type: KW_TYPE types
   33             | types

   34 types: var_id '=' data_type ';'
   35      | var_id '=' KW_FUNCTION '(' declaration ')' ':' data_type ';'

   36 var_id: IDENT
   37       | var_id ',' IDENT

   38 procedure: procedure_decl sec_header complex_cmd ';'

   39 procedure_decl: KW_PROCEDURE IDENT '(' declaration ')' ';'

   40 declaration: %empty
   41            | declaration_comp
   42            | declaration ';' declaration_comp

   43 declaration_comp: var_id ':' basic_data_type
   44                 | var_id ':' IDENT
   45                 | var_id ':' KW_ARRAY KW_OF basic_data_type
   46                 | var_id ':' KW_ARRAY dimensions KW_OF basic_data_type

   47 function: function_decl sec_header function_body

   48 function_decl: KW_FUNCTION IDENT '(' declaration ')' ':' data_type ';'
   49              | KW_FUNCTION IDENT '(' declaration ')' ':' IDENT ';'

   50 data_type: basic_data_type
   51          | KW_ARRAY KW_OF basic_data_type
   52          | KW_ARRAY dimensions KW_OF basic_data_type

   53 function_body: KW_BEGIN func_statements KW_END ';'

   54 func_statements: %empty
   55                | statement_list2

   56 statement_list2: function_stmt
   57                | statement_list2 ';' function_stmt
   58                | statement_list2 function_stmt

   59 function_stmt: cmd_list
   60              | return_cmd2
   61              | result_cmd

   62 expr: unary
   63     | KW_NOT unary
   64     | OP_LOG_NOT unary
   65     | expr KW_MOD unary
   66     | expr KW_DIV unary
   67     | expr '/' unary
   68     | expr '*' unary
   69     | expr '+' unary
   70     | expr '-' unary
   71     | expr '=' unary
   72     | expr OP_NEQ unary
   73     | expr '<' unary
   74     | expr '>' unary
   75     | expr OP_LEQT unary
   76     | expr OP_GEQT unary
   77     | expr KW_AND unary
   78     | expr OP_LOG_AND unary
   79     | expr KW_OR unary
   80     | expr OP_LOG_OR unary

   81 unary: element
   82      | '-' element
   83      | '+' element

   84 element: POSINT
   85        | REAL
   86        | IDENT
   87        | STRING
   88        | BOOLEAN_TRUE
   89        | BOOLEAN_FALSE
   90        | '(' expr ')'
   91        | '(' basic_data_type ')' expr
   92        | IDENT hooks_custom
   93        | func_cmd

   94 hooks_custom: '[' expr ']'
   95             | hooks_custom '[' expr ']'

   96 cmd_list: if_stmt
   97         | assign_cmd
   98         | while_stmt
   99         | for_stmt
  100         | goto_cmd
  101         | repeat_stmt
  102         | func_cmd

  103 stmt_comp: return_cmd ';'
  104          | assign_cmd
  105          | complex_cmd ';'
  106          | result_cmd
  107          | if_stmt
  108          | while_stmt
  109          | for_stmt

  110 assign_cmd: IDENT TK_ASSIGN expr
  111           | IDENT hooks_custom TK_ASSIGN expr

  112 if_stmt: KW_IF expr KW_THEN stmt_comp
  113        | KW_IF expr KW_THEN stmt_comp KW_ELSE stmt_comp

  114 while_stmt: KW_WHILE expr KW_DO stmt_comp

  115 repeat_stmt: KW_REPEAT stmt_comp KW_UNTIL expr

  116 for_stmt: KW_FOR IDENT TK_ASSIGN expr KW_TO expr KW_DO stmt_comp
  117         | KW_FOR IDENT TK_ASSIGN expr KW_DOWNTO expr KW_DO stmt_comp

  118 goto_cmd: KW_GOTO IDENT ';'

  119 return_cmd: KW_RETURN

  120 return_cmd2: KW_RETURN

  121 result_cmd: KW_RESULT TK_ASSIGN expr

  122 func_cmd: IDENT '(' func_cmd_arg ')'

  123 func_cmd_arg: %empty
  124             | expr
  125             | KW_RESULT
  126             | func_cmd_arg ',' expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 35 39 48 49 90 91 122
')' (41) 35 39 48 49 90 91 122
'*' (42) 68
'+' (43) 69 83
',' (44) 37 126
'-' (45) 70 82
'.' (46) 1
'/' (47) 67
':' (58) 28 29 30 31 35 43 44 45 46 48 49
';' (59) 2 6 7 12 28 29 30 31 34 35 38 39 42 48 49 53 57 103 105 118
'<' (60) 73
'=' (61) 34 35 71
'>' (62) 74
'[' (91) 23 24 94 95
']' (93) 23 24 94 95
error (256)
IDENT (258) 2 31 36 37 39 44 48 49 86 92 110 111 116 117 118 122
POSINT (259) 23 24 84
REAL (260) 85
STRING (261) 87
KW_PROGRAM (262) 2
KW_BEGIN (263) 8 53
KW_END (264) 8 53
KW_FUNCTION (265) 35 48 49
KW_PROCEDURE (266) 39
KW_RESULT (267) 121 125
KW_ARRAY (268) 29 30 45 46 51 52
KW_DO (269) 114 116 117
KW_GOTO (270) 118
KW_RETURN (271) 119 120
KW_BOOLEAN (272) 20
KW_ELSE (273) 113
KW_IF (274) 112 113
KW_OF (275) 29 30 45 46 51 52
KW_REAL (276) 22
KW_THEN (277) 112 113
KW_CHAR (278) 21
KW_FOR (279) 116 117
KW_INTEGER (280) 19
KW_REPEAT (281) 115
KW_UNTIL (282) 115
KW_VAR (283) 25
KW_WHILE (284) 114
KW_TO (285) 116
KW_DOWNTO (286) 117
KW_TYPE (287) 32
TK_ASSIGN (288) 110 111 116 117 121
BOOLEAN_TRUE (289) 88
BOOLEAN_FALSE (290) 89
CAST (291)
KW_OR (292) 79
OP_LOG_OR (293) 80
KW_AND (294) 77
OP_LOG_AND (295) 78
OP_NEQ (296) 72
OP_LEQT (297) 75
OP_GEQT (298) 76
KW_DIV (299) 66
KW_MOD (300) 65
KW_NOT (301) 63
OP_LOG_NOT (302) 64


Nonterminals, with rules where they appear

$accept (63)
    on left: 0
program (64)
    on left: 1, on right: 0
program_decl (65)
    on left: 2, on right: 1
sec_header (66)
    on left: 3 4 5 6 7, on right: 1 4 5 6 7 38 47
complex_cmd (67)
    on left: 8, on right: 1 38 105
statements (68)
    on left: 9 10, on right: 8
statement_list (69)
    on left: 11 12 13, on right: 10 12 13
statement (70)
    on left: 14 15 16, on right: 11 12 13
subprogram (71)
    on left: 17 18, on right: 5 7
basic_data_type (72)
    on left: 19 20 21 22, on right: 28 29 30 43 45 46 50 51 52 91
dimensions (73)
    on left: 23 24, on right: 24 30 46 52
var_decl (74)
    on left: 25 26 27, on right: 4 6
var_decl_comp (75)
    on left: 28 29 30 31, on right: 25 26
special_type (76)
    on left: 32 33, on right: 27
types (77)
    on left: 34 35, on right: 32 33
var_id (78)
    on left: 36 37, on right: 28 29 30 31 34 35 37 43 44 45 46
procedure (79)
    on left: 38, on right: 17
procedure_decl (80)
    on left: 39, on right: 38
declaration (81)
    on left: 40 41 42, on right: 35 39 42 48 49
declaration_comp (82)
    on left: 43 44 45 46, on right: 41 42
function (83)
    on left: 47, on right: 18
function_decl (84)
    on left: 48 49, on right: 47
data_type (85)
    on left: 50 51 52, on right: 34 35 48
function_body (86)
    on left: 53, on right: 47
func_statements (87)
    on left: 54 55, on right: 53
statement_list2 (88)
    on left: 56 57 58, on right: 55 57 58
function_stmt (89)
    on left: 59 60 61, on right: 56 57 58
expr (90)
    on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
    80, on right: 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 90
    91 94 95 110 111 112 113 114 115 116 117 121 124 126
unary (91)
    on left: 81 82 83, on right: 62 63 64 65 66 67 68 69 70 71 72 73
    74 75 76 77 78 79 80
element (92)
    on left: 84 85 86 87 88 89 90 91 92 93, on right: 81 82 83
hooks_custom (93)
    on left: 94 95, on right: 92 95 111
cmd_list (94)
    on left: 96 97 98 99 100 101 102, on right: 14 59
stmt_comp (95)
    on left: 103 104 105 106 107 108 109, on right: 112 113 114 115
    116 117
assign_cmd (96)
    on left: 110 111, on right: 97 104
if_stmt (97)
    on left: 112 113, on right: 96 107
while_stmt (98)
    on left: 114, on right: 98 108
repeat_stmt (99)
    on left: 115, on right: 101
for_stmt (100)
    on left: 116 117, on right: 99 109
goto_cmd (101)
    on left: 118, on right: 100
return_cmd (102)
    on left: 119, on right: 15 103
return_cmd2 (103)
    on left: 120, on right: 60
result_cmd (104)
    on left: 121, on right: 16 61 106
func_cmd (105)
    on left: 122, on right: 93 102
func_cmd_arg (106)
    on left: 123 124 125 126, on right: 122 126


State 0

    0 $accept: . program $end
    1 program: . program_decl sec_header complex_cmd '.'
    2 program_decl: . KW_PROGRAM IDENT ';'

    KW_PROGRAM  shift, and go to state 1

    program       go to state 2
    program_decl  go to state 3


State 1

    2 program_decl: KW_PROGRAM . IDENT ';'

    IDENT  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: program_decl . sec_header complex_cmd '.'
    3 sec_header: . %empty
    4           | . sec_header var_decl
    5           | . sec_header subprogram
    6           | . sec_header ';' var_decl
    7           | . sec_header ';' subprogram

    $default  reduce using rule 3 (sec_header)

    sec_header  go to state 6


State 4

    2 program_decl: KW_PROGRAM IDENT . ';'

    ';'  shift, and go to state 7


State 5

    0 $accept: program $end .

    $default  accept


State 6

    1 program: program_decl sec_header . complex_cmd '.'
    4 sec_header: sec_header . var_decl
    5           | sec_header . subprogram
    6           | sec_header . ';' var_decl
    7           | sec_header . ';' subprogram
    8 complex_cmd: . KW_BEGIN statements KW_END
   17 subprogram: . procedure
   18           | . function
   25 var_decl: . KW_VAR var_decl_comp
   26         | . var_decl_comp
   27         | . special_type
   28 var_decl_comp: . var_id ':' basic_data_type ';'
   29              | . var_id ':' KW_ARRAY KW_OF basic_data_type ';'
   30              | . var_id ':' KW_ARRAY dimensions KW_OF basic_data_type ';'
   31              | . var_id ':' IDENT ';'
   32 special_type: . KW_TYPE types
   33             | . types
   34 types: . var_id '=' data_type ';'
   35      | . var_id '=' KW_FUNCTION '(' declaration ')' ':' data_type ';'
   36 var_id: . IDENT
   37       | . var_id ',' IDENT
   38 procedure: . procedure_decl sec_header complex_cmd ';'
   39 procedure_decl: . KW_PROCEDURE IDENT '(' declaration ')' ';'
   47 function: . function_decl sec_header function_body
   48 function_decl: . KW_FUNCTION IDENT '(' declaration ')' ':' data_type ';'
   49              | . KW_FUNCTION IDENT '(' declaration ')' ':' IDENT ';'

    IDENT         shift, and go to state 8
    KW_BEGIN      shift, and go to state 9
    KW_FUNCTION   shift, and go to state 10
    KW_PROCEDURE  shift, and go to state 11
    KW_VAR        shift, and go to state 12
    KW_TYPE       shift, and go to state 13
    ';'           shift, and go to state 14

    complex_cmd     go to state 15
    subprogram      go to state 16
    var_decl        go to state 17
    var_decl_comp   go to state 18
    special_type    go to state 19
    types           go to state 20
    var_id          go to state 21
    procedure       go to state 22
    procedure_decl  go to state 23
    function        go to state 24
    function_decl   go to state 25


State 7

    2 program_decl: KW_PROGRAM IDENT ';' .

    $default  reduce using rule 2 (program_decl)


State 8

   36 var_id: IDENT .

    $default  reduce using rule 36 (var_id)


State 9

    8 complex_cmd: KW_BEGIN . statements KW_END
    9 statements: . %empty  [KW_END]
   10           | . statement_list
   11 statement_list: . statement
   12               | . statement_list ';' statement
   13               | . statement_list statement
   14 statement: . cmd_list
   15          | . return_cmd
   16          | . result_cmd
   96 cmd_list: . if_stmt
   97         | . assign_cmd
   98         | . while_stmt
   99         | . for_stmt
  100         | . goto_cmd
  101         | . repeat_stmt
  102         | . func_cmd
  110 assign_cmd: . IDENT TK_ASSIGN expr
  111           | . IDENT hooks_custom TK_ASSIGN expr
  112 if_stmt: . KW_IF expr KW_THEN stmt_comp
  113        | . KW_IF expr KW_THEN stmt_comp KW_ELSE stmt_comp
  114 while_stmt: . KW_WHILE expr KW_DO stmt_comp
  115 repeat_stmt: . KW_REPEAT stmt_comp KW_UNTIL expr
  116 for_stmt: . KW_FOR IDENT TK_ASSIGN expr KW_TO expr KW_DO stmt_comp
  117         | . KW_FOR IDENT TK_ASSIGN expr KW_DOWNTO expr KW_DO stmt_comp
  118 goto_cmd: . KW_GOTO IDENT ';'
  119 return_cmd: . KW_RETURN
  121 result_cmd: . KW_RESULT TK_ASSIGN expr
  122 func_cmd: . IDENT '(' func_cmd_arg ')'

    IDENT      shift, and go to state 26
    KW_RESULT  shift, and go to state 27
    KW_GOTO    shift, and go to state 28
    KW_RETURN  shift, and go to state 29
    KW_IF      shift, and go to state 30
    KW_FOR     shift, and go to state 31
    KW_REPEAT  shift, and go to state 32
    KW_WHILE   shift, and go to state 33

    $default  reduce using rule 9 (statements)

    statements      go to state 34
    statement_list  go to state 35
    statement       go to state 36
    cmd_list        go to state 37
    assign_cmd      go to state 38
    if_stmt         go to state 39
    while_stmt      go to state 40
    repeat_stmt     go to state 41
    for_stmt        go to state 42
    goto_cmd        go to state 43
    return_cmd      go to state 44
    result_cmd      go to state 45
    func_cmd        go to state 46


State 10

   48 function_decl: KW_FUNCTION . IDENT '(' declaration ')' ':' data_type ';'
   49              | KW_FUNCTION . IDENT '(' declaration ')' ':' IDENT ';'

    IDENT  shift, and go to state 47


State 11

   39 procedure_decl: KW_PROCEDURE . IDENT '(' declaration ')' ';'

    IDENT  shift, and go to state 48


State 12

   25 var_decl: KW_VAR . var_decl_comp
   28 var_decl_comp: . var_id ':' basic_data_type ';'
   29              | . var_id ':' KW_ARRAY KW_OF basic_data_type ';'
   30              | . var_id ':' KW_ARRAY dimensions KW_OF basic_data_type ';'
   31              | . var_id ':' IDENT ';'
   36 var_id: . IDENT
   37       | . var_id ',' IDENT

    IDENT  shift, and go to state 8

    var_decl_comp  go to state 49
    var_id         go to state 50


State 13

   32 special_type: KW_TYPE . types
   34 types: . var_id '=' data_type ';'
   35      | . var_id '=' KW_FUNCTION '(' declaration ')' ':' data_type ';'
   36 var_id: . IDENT
   37       | . var_id ',' IDENT

    IDENT  shift, and go to state 8

    types   go to state 51
    var_id  go to state 52


State 14

    6 sec_header: sec_header ';' . var_decl
    7           | sec_header ';' . subprogram
   17 subprogram: . procedure
   18           | . function
   25 var_decl: . KW_VAR var_decl_comp
   26         | . var_decl_comp
   27         | . special_type
   28 var_decl_comp: . var_id ':' basic_data_type ';'
   29              | . var_id ':' KW_ARRAY KW_OF basic_data_type ';'
   30              | . var_id ':' KW_ARRAY dimensions KW_OF basic_data_type ';'
   31              | . var_id ':' IDENT ';'
   32 special_type: . KW_TYPE types
   33             | . types
   34 types: . var_id '=' data_type ';'
   35      | . var_id '=' KW_FUNCTION '(' declaration ')' ':' data_type ';'
   36 var_id: . IDENT
   37       | . var_id ',' IDENT
   38 procedure: . procedure_decl sec_header complex_cmd ';'
   39 procedure_decl: . KW_PROCEDURE IDENT '(' declaration ')' ';'
   47 function: . function_decl sec_header function_body
   48 function_decl: . KW_FUNCTION IDENT '(' declaration ')' ':' data_type ';'
   49              | . KW_FUNCTION IDENT '(' declaration ')' ':' IDENT ';'

    IDENT         shift, and go to state 8
    KW_FUNCTION   shift, and go to state 10
    KW_PROCEDURE  shift, and go to state 11
    KW_VAR        shift, and go to state 12
    KW_TYPE       shift, and go to state 13

    subprogram      go to state 53
    var_decl        go to state 54
    var_decl_comp   go to state 18
    special_type    go to state 19
    types           go to state 20
    var_id          go to state 21
    procedure       go to state 22
    procedure_decl  go to state 23
    function        go to state 24
    function_decl   go to state 25


State 15

    1 program: program_decl sec_header complex_cmd . '.'

    '.'  shift, and go to state 55


State 16

    5 sec_header: sec_header subprogram .

    $default  reduce using rule 5 (sec_header)


State 17

    4 sec_header: sec_header var_decl .

    $default  reduce using rule 4 (sec_header)


State 18

   26 var_decl: var_decl_comp .

    $default  reduce using rule 26 (var_decl)


State 19

   27 var_decl: special_type .

    $default  reduce using rule 27 (var_decl)


State 20

   33 special_type: types .

    $default  reduce using rule 33 (special_type)


State 21

   28 var_decl_comp: var_id . ':' basic_data_type ';'
   29              | var_id . ':' KW_ARRAY KW_OF basic_data_type ';'
   30              | var_id . ':' KW_ARRAY dimensions KW_OF basic_data_type ';'
   31              | var_id . ':' IDENT ';'
   34 types: var_id . '=' data_type ';'
   35      | var_id . '=' KW_FUNCTION '(' declaration ')' ':' data_type ';'
   37 var_id: var_id . ',' IDENT

    '='  shift, and go to state 56
    ':'  shift, and go to state 57
    ','  shift, and go to state 58


State 22

   17 subprogram: procedure .

    $default  reduce using rule 17 (subprogram)


State 23

    3 sec_header: . %empty
    4           | . sec_header var_decl
    5           | . sec_header subprogram
    6           | . sec_header ';' var_decl
    7           | . sec_header ';' subprogram
   38 procedure: procedure_decl . sec_header complex_cmd ';'

    $default  reduce using rule 3 (sec_header)

    sec_header  go to state 59


State 24

   18 subprogram: function .

    $default  reduce using rule 18 (subprogram)


State 25

    3 sec_header: . %empty
    4           | . sec_header var_decl
    5           | . sec_header subprogram
    6           | . sec_header ';' var_decl
    7           | . sec_header ';' subprogram
   47 function: function_decl . sec_header function_body

    $default  reduce using rule 3 (sec_header)
